...
        android:layout_marginStart="17dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:text="10"
        android:textSize="25sp"
        android:textColor="@color/colorText"
        android:ems="10"
        android:id="@+id/custom_map_num_regions"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@+id/regions_text" />

    <Button style="@style/Widget.AppCompat.Button.Colored"
        android:id="@+id/custom_map_cancel"
        android:layout_height="wrap_content"
...
        android:layout_width="80dp"
        android:layout_marginBottom="29dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/game_details_title" />

    <Button style="@style/Widget.AppCompat.Button.Colored"
        android:id="@+id/custom_map_okay"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@color/colorPrimaryDark"
        android:text="@string/okay"
        android:textColor="@color/colorText"
        android:textSize="15sp"
...
