<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_title_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimary"
    tools:context="edu.temple.fourcolorgame.Activities.TitleScreen">

    <Button style="@style/Widget.AppCompat.Button.Colored"
        android:id="@+id/puzzle_mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@color/colorPrimaryDark"
        android:text="@string/puzzle_mode_text"
        android:textColor="@color/colorText"
        android:textSize="20sp"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

    <Button style="@style/Widget.AppCompat.Button.Colored"
        android:id="@+id/vs_ai_mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@color/colorPrimaryDark"
        android:text="@string/vs_ai_text"
        android:textColor="@color/colorText"
        android:textSize="20sp"
        android:layout_below="@+id/puzzle_mode"
        android:layout_alignParentStart="true"
        android:layout_marginTop="48dp" />

    <Button style="@style/Widget.AppCompat.Button.Colored"
        android:id="@+id/multiplayer_mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@color/colorPrimaryDark"
        android:text="@string/multiplayer_text"
        android:textColor="@color/colorText"
...
