<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_game_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
...
        style="@style/Widget.AppCompat.Button.Colored"
        android:text="@string/next"
        android:textColor="@color/colorText"
        android:background="@color/colorPrimaryDark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/game_details_next"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_below="@+id/help_button"
        android:layout_alignParentStart="true"
        android:layout_height="440dp">

        <FrameLayout
        android:layout_width="match_parent"
        android:id="@+id/map_choices_panel"
        android:layout_height="280dp"
        android:layout_alignParentStart="true">

    </FrameLayout>

        <FrameLayout
            android:id="@+id/computer_player_skill_fragment"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true">

        </FrameLayout>
...
