...
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorText"
        android:textSize="25sp"
        android:text = "@string/computer_skills"
        android:id="@+id/computer_skills_title"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        style="@style/Widget.AppCompat.Button.Colored"
        android:text="@string/hard_mode"
        android:textSize="15sp"
        android:textColor="@color/colorText"
        android:background="@color/colorPrimaryDark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/computer_skill_hard"
        android:layout_alignBaseline="@+id/computer_skill_easy"
        android:layout_alignBottom="@+id/computer_skill_easy"
        android:layout_alignEnd="@+id/computer_skills_title" />

    <Button
        style="@style/Widget.AppCompat.Button.Colored"
        android:text="@string/easy_mode"
...
