...
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorPrimary"
    android:layout_height="match_parent"
    android:id="@+id/color_picker_layout">

    <Spinner
        android:background="@null"
        android:id="@+id/first_color_choice"
        android:layout_width="80dp"
        android:layout_height="80dp"
...

    <TextView
        android:text=""
        android:textColor="@color/colorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/color_pick_bottom_text"
        android:layout_alignTop="@+id/third_color_choice"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp" />

    <TextView
        android:textColor="@color/colorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/color_pick_top_text"
        android:layout_marginTop="30dp"
        android:layout_alignTop="@+id/first_color_choice"
        android:layout_centerHorizontal="true" />

    <Button
        style="@style/Widget.AppCompat.Button.Colored"
...
